[package]
authors = ["Behrang Shafei"]
edition = "2021"
name = "rvimage"
publish = false
version = "0.1.1"
[lib]
name = "rvlib"
path = "src/rvlib/lib.rs"

[[bin]]
name = "rvimage"
path = "src/main.rs"

[features]
default = ["optimize", "azure_blob"]
optimize = ["log/release_max_level_warn"]
azure_blob = [
    "dep:futures",
    "dep:tokio",
    "dep:azure_storage",
    "dep:azure_storage_blobs",
]

[dependencies]
azure_storage = { version = "0.12.0", optional = true }
azure_storage_blobs = { version = "0.12.0", optional = true }
conv = "0.3.3"
dirs = "5.0.1"
edit = "0.1.4"
#egui = "0.21"
#egui-wgpu = "0.21"
#egui-winit = { version = "0.21", default-features = false, features = [
#    "links",
#    "clipboard",
#] }
env_logger = "0.10"
futures = { version = "0.3", optional = true }
httparse = "~1.8"
image = "0.24.6"
imageproc = "~0.23"
lazy_static = "1.4.0"
log = "0.4"
percent-encoding = "2.2.0"
pixels = "0.12.1"
rand = "0.8.5"
regex = "1.8.4"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
rfd = "0.11.1"
rusttype = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "1.0"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
toml = "0.7.2"
walkdir = "2.3.2"
winit = "0.27"
winit_input_helper = "0.13"
tokio = { version = "1.28.2", optional = true }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[dependencies.egui]
git = "https://github.com/emilk/egui.git"
rev = "f222ee044edf8beebfaf5dd7be15c9f318f20886"

[dependencies.egui-wgpu]
git = "https://github.com/emilk/egui.git"
rev = "f222ee044edf8beebfaf5dd7be15c9f318f20886"

[dependencies.egui-winit]
git = "https://github.com/emilk/egui.git"
rev = "f222ee044edf8beebfaf5dd7be15c9f318f20886"
features = ["clipboard", "links"]
default-features = false
