[package]
authors = ["Behrang Shafei"]
edition = "2021"
name = "rvimage"
license = "MIT OR Apache-2.0"
description = "A remote image viewer with a bounding box labeling tool"
readme = "README.md"
version = "0.2.2"
homepage = "https://github.com/bertiqwerty/rvimage"
repository = "https://github.com/bertiqwerty/rvimage"
keywords = ["image", "viewer", "label", "remote", "ssh"]
categories = ["computer-vision"]

[lib]
name = "rvlib"
path = "src/rvlib/lib.rs"

[[bin]]
name = "rvimage"
path = "src/main.rs"

[features]
default = ["optimize", "azure_blob"]
optimize = ["log/release_max_level_warn"]
azure_blob = [
    "dep:futures",
    "dep:tokio",
    "dep:azure_storage",
    "dep:azure_storage_blobs",
]

[dependencies]
azure_storage = { version = "0.17.0", optional = true }
azure_storage_blobs = { version = "0.17.0", optional = true }
conv = "0.3.3"
dirs = "5.0.1"
edit = "0.1.4"
egui = "0.24.1"
eframe = { version = "0.24.1", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
futures = { version = "0.3", optional = true }
httparse = "~1.8"
image = "0.24.7"
imageproc = "~0.23"
lazy_static = "1.4.0"
log = "0.4"
percent-encoding = "2.3.0"
rand = "0.8.5"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
rfd = "0.12.0"
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
toml = "0.8.1"
walkdir = "2.3.3"
tokio = { version = "1.32.0", optional = true }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
exmex = "0.18.0"
tracing = "0.1"
tracing-subscriber = "0.3"
