
[package]
authors = ["Behrang Shafei"]
edition = "2021"
name = "rvimage-domain"
license = "MIT OR Apache-2.0"
description = "Process elements in the image domain such as polygons or bounding boxes for RV Image"
readme = "README.md"
version = "0.4.8"
homepage = "https://github.com/bertiqwerty/rvimage"
repository = "https://github.com/bertiqwerty/rvimage"
keywords = ["polygon", "RLE", "canvas", "image"]
categories = ["computer-vision"]

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
image = "0.25.4"
imageproc = "0.25"
tracing = "0.1.41"