[package]
name = "rvimage-py"
version = "0.4.1"
edition = "2021"

[lib]
name = "rvimage"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["generate-import-lib"] }
numpy = "0.24.0"
rvimage-domain = { path = "../rvimage-domain" }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
