[project]
name = "rvimage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "pydantic>=2.11.7",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
