[project]
name = "rvimage"
version = "0.1.3"
description = "Pydantic types to facilitate writing prediction APIs integrated into the image annotation tool RV Image"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "pydantic>=2.11.7",
    "scipy>=1.15.3",
]
[project.urls]
Repository = "https://github.com/bertiqwerty/rvimage"
[dependency-groups]
dev = ["pytest>=8.4.1"]
