[package]
authors = ["Behrang Shafei"]
edition = "2021"
name = "rvimage"
license = "MIT OR Apache-2.0"
description = "A remote image viewer with a labeling tool"
readme = "../README.md"
version = "0.4.40"
homepage = "https://github.com/bertiqwerty/rvimage"
repository = "https://github.com/bertiqwerty/rvimage"
keywords = ["image", "viewer", "label", "remote", "ssh"]
categories = ["computer-vision"]

[lib]
name = "rvlib"
path = "src/rvlib/lib.rs"

[[bin]]
name = "rvimage"
path = "src/main.rs"

[features]
default = ["optimize", "azure_blob"]
optimize = ["log/release_max_level_warn"]
azure_blob = [
    "dep:futures",
    "dep:tokio",
    "dep:azure_storage",
    "dep:azure_storage_blobs",
]
print_timings = []
print_debug = []

[dependencies]
azure_storage = { version = "0.21.0", optional = true }
azure_storage_blobs = { version = "0.21.0", optional = true }
conv = "0.3.3"
dirs = "6.0.0"
edit = "0.1.5"
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",
] }
egui_plot = "0.32.1"
futures = { version = "0.3.31", optional = true }
httparse = "1.10.1"
image = "0.25.6"
imageproc = "0.25.0"
lazy_static = "1.5.0"
log = "0.4.27"
percent-encoding = "2.3.1"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json", "multipart"] }
rfd = "0.15.3"
rusttype = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ssh2 = { version = "0.9.5", features = [
    "vendored-openssl",
    "openssl-on-win32",
] }
toml = "0.8.20"
walkdir = "2.5.0"
tokio = { version = "1.44.2", optional = true, features = ["rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
exmex = "0.20.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
backtrace = "0.3.74"
zip = "3.0.0"
rvimage-domain = "0.4.9"
clap = { version = "4.5.35", features = ["derive"] }
chrono = { version = "0.4.40", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
whoami = "1.6.0"
# temporary pin
url = "2.5.4"
