[package]
authors = ["Behrang Shafei"]
edition = "2024"
name = "rvimage"
license = "MIT OR Apache-2.0"
description = "A remote image viewer with a labeling tool"
readme = "../README.md"
version = "0.6.1"
homepage = "https://github.com/bertiqwerty/rvimage"
repository = "https://github.com/bertiqwerty/rvimage"
keywords = ["image", "viewer", "label", "remote", "ssh"]
categories = ["computer-vision"]

[lib]
name = "rvlib"
path = "src/rvlib/lib.rs"

[[bin]]
name = "rvimage"
path = "src/main.rs"

[features]
default = ["optimize", "azure_blob"]
optimize = ["log/release_max_level_warn"]
azure_blob = [
    "dep:futures",
    "dep:tokio",
    "dep:azure_storage",
    "dep:azure_storage_blobs",
]
print_timings = []
print_debug = []

[dependencies]
azure_storage = { version = "0.21.0", optional = true }
azure_storage_blobs = { version = "0.21.0", optional = true }
base64 = "0.22.1"
conv = "0.3.3"
dirs = "6.0.0"
edit = "0.1.5"
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",
] }
egui_plot = "0.34.0"
futures = { version = "0.3.31", optional = true }
httparse = "1.10.1"
image = "0.25.8"
imageproc = "0.25.0"
lazy_static = "1.5.0"
log = "0.4.29"
percent-encoding = "2.3.2"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.26", features = ["blocking", "json", "multipart"] }
rfd = "0.16.0"
rusttype = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ssh2 = { version = "0.9.5", features = [
    "vendored-openssl",
    "openssl-on-win32",
] }
toml = "0.9.9"
walkdir = "2.5.0"
tokio = { version = "1.48.0", optional = true, features = ["rt-multi-thread", "time"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
exmex = "0.20.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
backtrace = "0.3.76"
zip = "7.0.0"
rvimage-domain = "0.4.10"
clap = { version = "4.5.53", features = ["derive"] }
chrono = { version = "0.4.42", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
whoami = "1.6.1"
# temporary pin
url = "2.5.7"
